cleanup graalpythonscriptengine