@@ -12,13 +12,15 @@
  */
 package org.openhab.automation.pythonscripting.internal.graal;
 
-import java.lang.ref.WeakReference;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 import javax.script.ScriptEngine;
 import javax.script.ScriptEngineFactory;
 
+import org.graalvm.polyglot.Context;
+import org.graalvm.polyglot.Context.Builder;
 import org.graalvm.polyglot.Engine;
 import org.graalvm.polyglot.Language;
 
@@ -29,47 +31,27 @@ import org.graalvm.polyglot.Language;
  * @author Jeff James - Initial contribution
  */
 public final class GraalPythonScriptEngineFactory implements ScriptEngineFactory {
-    private WeakReference<Engine> defaultEngine;
-    private final Engine userDefinedEngine;
-
     private static final String ENGINE_NAME = "Graal.py";
     private static final String NAME = "python3";
 
     private static final String[] EXTENSIONS = { "py" };
 
-    public GraalPythonScriptEngineFactory() {
-        super();
-        this.userDefinedEngine = null;
+    private final Engine engine;
+    private final Language language;
+    private Builder contextConfig;
 
-        defaultEngine = new WeakReference<>(createDefaultEngine());
+    public GraalPythonScriptEngineFactory(Engine engine, Context.Builder contextConfig) {
+        this.engine = engine;
+        this.contextConfig = contextConfig;
+        this.language = getPolyglotEngine().getLanguages().get(GraalPythonScriptEngine.LANGUAGE_ID);
     }
 
-    public GraalPythonScriptEngineFactory(Engine engine) {
-        this.defaultEngine = null;
-        this.userDefinedEngine = engine;
+    public Builder getContextConfig() {
+        return contextConfig;
     }
 
-    private static Engine createDefaultEngine() {
-        return Engine.newBuilder() //
-                .allowExperimentalOptions(true) //
-                .option("engine.WarnInterpreterOnly", "false") //
-                .build();
-    }
-
-    /**
-     * Returns the underlying polyglot engine.
-     */
     public Engine getPolyglotEngine() {
-        if (userDefinedEngine != null) {
-            return userDefinedEngine;
-        } else {
-            Engine engine = defaultEngine == null ? null : defaultEngine.get();
-            if (engine == null) {
-                engine = createDefaultEngine();
-                defaultEngine = new WeakReference<>(engine);
-            }
-            return engine;
-        }
+        return engine;
     }
 
     @Override
@@ -89,26 +71,24 @@ public final class GraalPythonScriptEngineFactory implements ScriptEngineFactory
 
     @Override
     public List<String> getMimeTypes() {
-        Language language = getPolyglotEngine().getLanguages().get(GraalPythonScriptEngine.LANGUAGE_ID);
-        return List.copyOf(language.getMimeTypes());
+        return language != null ? List.copyOf(language.getMimeTypes()) : Collections.emptyList();
     }
 
     @Override
     public List<String> getNames() {
-        Language language = getPolyglotEngine().getLanguages().get(GraalPythonScriptEngine.LANGUAGE_ID);
-        return List.of(language.getName(), GraalPythonScriptEngine.LANGUAGE_ID, language.getImplementationName());
+        return language != null
+                ? List.of(language.getName(), GraalPythonScriptEngine.LANGUAGE_ID, language.getImplementationName())
+                : Collections.emptyList();
     }
 
     @Override
     public String getLanguageName() {
-        Language language = getPolyglotEngine().getLanguages().get(GraalPythonScriptEngine.LANGUAGE_ID);
-        return language.getName();
+        return language != null ? language.getName() : null;
     }
 
     @Override
     public String getLanguageVersion() {
-        Language language = getPolyglotEngine().getLanguages().get(GraalPythonScriptEngine.LANGUAGE_ID);
-        return language.getVersion();
+        return language != null ? language.getVersion() : null;
     }
 
     @Override
